@@ -1,1 +1,2 @@
 char *xs_unicode_text (char *, int);
+HV *xs_merge_text (HV *self, HV *current, SV *text_in);
